<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/wordInput"
        android:layout_width="262dp"
        android:layout_height="73dp"
        android:layout_marginTop="124dp"
        android:hint="단어를 입력하세요."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nInput"
        android:layout_width="191dp"
        android:layout_height="56dp"
        android:hint="단어를 입력하세요."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordInput"
        app:layout_constraintVertical_bias="0.073" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/adjInput"
        android:layout_width="191dp"
        android:layout_height="56dp"
        android:hint="단어를 입력하세요."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordInput"
        app:layout_constraintVertical_bias="0.397" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/vInput"
        android:layout_width="191dp"
        android:layout_height="56dp"
        android:hint="단어를 입력하세요."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordInput"
        app:layout_constraintVertical_bias="0.235" />

    <TextView
        android:id="@+id/noun3"
        android:layout_width="76dp"
        android:layout_height="60dp"
        android:textColor="@color/titleColor"
        android:text="@string/verbTitle"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/advInput"
        android:layout_width="191dp"
        android:layout_height="56dp"
        android:hint="단어를 입력하세요."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordInput"
        app:layout_constraintVertical_bias="0.558" />

    <TextView
        android:id="@+id/adj"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:textColor="@color/titleColor"
        android:text="@string/adjTitle"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <TextView
        android:id="@+id/Noun"
        android:layout_width="76dp"
        android:layout_height="60dp"
        android:textColor="@color/titleColor"
        android:text="@string/nounTitle"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClickAdd"
        android:text="@string/add"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/noun2"
        android:layout_width="76dp"
        android:layout_height="60dp"
        android:textColor="@color/titleColor"
        android:text="@string/advTitle"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

</androidx.constraintlayout.widget.ConstraintLayout>
